# botero-trade-engine

./: .env.example  .gitignore  .graphifyignore  .npmrc  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  breakout_results.txt  docker-compose.yml  get_mcp_tools.py  mcp_tools_output.txt  next.config.js  package.json  pnpm-lock.yaml  scratch_simulation.py  skills-lock.json  test.json  test_imports.py  test_mcps_connectivity.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.agent/: clean_architecture_skill.md
.claude/: SKILLS.md
backend/: pg_speed_test.py  refactor_imports.py  refactor_imports_2.py  requirements.txt  run_monitor.sh  test_conn.py  test_finnhub.py  test_imports.py
data/: forensic_results.md  shadow_mode.db
docs/: ANTIGRAVITY_RECOVERY.md  CLEAN-Payload.md  PR_DESCRIPTION.md  architecture-diagram.md  architecture-expert-committee.md  architecture-modules-internal.md  dynamic-font-strategy.md  envelope-encryption-sprint-plan.md  how-to-add-blocks.md  phase4_dependency_injection_plan.md  postgres-connectivity-troubleshooting.md  session-portfolio-intelligence.md  session-spring-strategy-audit.md  skill-system-reference.md
mcp_servers/gurufocus/: pyproject.toml
mcp_servers/gurufocus/.cache/gurufocus-mcp/: cache.db  cache.db-shm  cache.db-wal
mcp_servers/gurufocus/gurufocus_mcp/: server.py
mcp_servers/gurufocus/gurufocus_mcp/tools/: analysis.py  economic.py  etfs.py  gurus.py  insiders.py  personal.py  politicians.py  reference.py  schemas.py  stocks.py
scripts/: auto-migrate.exp  check-anthropic-admin-key.mjs  check_internet.sh  deep_forensics.py  (+18 more)
(+946 files in other folders)
